WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60915
REGRESSION (
r84750
): Moving by word stops at apostrophe mid-word
https://bugs.webkit.org/show_bug.cgi?id=60915
Summary
REGRESSION (r84750): Moving by word stops at apostrophe mid-word
mitz
Reported
2011-05-16 12:57:25 PDT
REGRESSION (
r84750
): Moving by word stops at apostrophe mid-word
Attachments
Revert r84750
(7.23 KB, patch)
2011-05-16 13:10 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-05-16 12:58:03 PDT
<
rdar://problem/9446653
>
mitz
Comment 2
2011-05-16 13:10:06 PDT
Created
attachment 93684
[details]
Revert
r84750
Darin Adler
Comment 3
2011-05-16 13:11:54 PDT
Would be good to add a test case for the word boundary in “house’s” too.
mitz
Comment 4
2011-05-16 13:15:02 PDT
Fixed in
r86599
. <
http://trac.webkit.org/changeset/86599
>
Ryosuke Niwa
Comment 5
2011-05-16 14:18:15 PDT
It seems like this broke "Find" on Leopard:
http://build.webkit.org/builders/Leopard%20Intel%20Release%20%28Tests%29/builds/32274
mitz
Comment 6
2011-05-16 14:23:30 PDT
(In reply to
comment #5
)
> It seems like this broke "Find" on Leopard: >
http://build.webkit.org/builders/Leopard%20Intel%20Release%20%28Tests%29/builds/32274
Thanks. Platform-specific results would need to be (re-?)added.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug